WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104840
REGRESSION(137336): Generated run-ins are not placed correctly
https://bugs.webkit.org/show_bug.cgi?id=104840
Summary
REGRESSION(137336): Generated run-ins are not placed correctly
Elliott Sprehn
Reported
2012-12-12 14:04:15 PST
REGRESSION(137336): Generated run-ins are not placed correctly
Attachments
Patch
(5.78 KB, patch)
2012-12-12 14:12 PST
,
Elliott Sprehn
no flags
Details
Formatted Diff
Diff
Patch
(7.01 KB, patch)
2012-12-12 14:20 PST
,
Elliott Sprehn
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Elliott Sprehn
Comment 1
2012-12-12 14:12:07 PST
Created
attachment 179122
[details]
Patch
Elliott Sprehn
Comment 2
2012-12-12 14:20:32 PST
Created
attachment 179125
[details]
Patch
Elliott Sprehn
Comment 3
2012-12-12 14:54:10 PST
Comment on
attachment 179125
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=179125&action=review
> Source/WebCore/rendering/RenderBlock.cpp:1836 > + ASSERT(runIn->node());
Hmm, it seems this simplification is not possible because things like RenderButton::addChild create anonymous blocks with style()->display(). I had thought there was no way to create an anonymous run-in, but it appears I'm wrong.
Elliott Sprehn
Comment 4
2012-12-12 14:59:41 PST
(In reply to
comment #3
)
> (From update of
attachment 179125
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=179125&action=review
> > > Source/WebCore/rendering/RenderBlock.cpp:1836 > > + ASSERT(runIn->node()); > > Hmm, it seems this simplification is not possible because things like RenderButton::addChild create anonymous blocks with style()->display(). I had thought there was no way to create an anonymous run-in, but it appears I'm wrong.
Actually, after digging more it appears this can't happen so it should be fine to assert about this.
WebKit Review Bot
Comment 5
2012-12-12 15:44:20 PST
Comment on
attachment 179125
[details]
Patch Clearing flags on attachment: 179125 Committed
r137528
: <
http://trac.webkit.org/changeset/137528
>
WebKit Review Bot
Comment 6
2012-12-12 15:44:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug