REGRESSION(137336): Generated run-ins are not placed correctly https://bugs.webkit.org/show_bug.cgi?id=104840

Patch by Elliott Sprehn <esprehn@gmail.com> on 2012-12-12
Reviewed by Abhishek Arya.

Source/WebCore:

Now that :before and :after are not anonymous we no longer need special
handling for run-ins. Currently placeRunInIfNeeded will only place
a generated content run-in if a special flag is passed, but I removed
the call with the flag as it wasn't needed in r137336. This patch just
removes all special handling for generated content run-ins.

Test: fast/css-generated-content/generated-runin.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::addChildIgnoringAnonymousColumnBlocks):
(WebCore::RenderBlock::placeRunInIfNeeded):
(WebCore::RenderBlock::createReplacementRunIn):
    Lots of simplfication since there's no more anonymous run-ins.
* rendering/RenderBlock.h:
(RenderBlock):
* rendering/RenderObject.h:

LayoutTests:

Add a test for dynamically adding a generated content run-in.

* fast/css-generated-content/generated-runin-expected.html: Added.
* fast/css-generated-content/generated-runin.html: Added.

Canonical link: https://commits.webkit.org/123082@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137528 268f45cc-cd09-0410-ab3c-d52691b4dbfc